--- a/mi-primer-website.html
+++ b/mi-primer-website.html
@@ -14,6 +14,7 @@
                 <li><a href="Categorias.html">Categorias</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
               </ul>
           </nav>
           <button class="button-menu-toggle">Menu</button>
